# pen-stack

./: .gitignore  CHANGELOG.md  CITATION.cff  DATA_LICENSES.md  MANIFEST.in  PEN_STACK_PLATFORM_v1.0_EXECUTION_PLAN.md  README.md  VERIFICATION_REPORT.md  docker-compose.models.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: run.py
benchmarks/chat_grounding/: README.md  SHA256SUMS  cases.jsonl  harness.py  result.json
benchmarks/chat_headtohead/: README.md  harness.py  result.json
benchmarks/chat_routing/: README.md  SHA256SUMS  cases.jsonl  harness.py  result.json
benchmarks/chat_safety/: README.md  SHA256SUMS  cases.jsonl  harness.py  result.json
benchmarks/delivery/: SHA256SUMS  capsid_fitness_metrics.json  harness.py  split.json
benchmarks/genome_writing_bench/: LEADERBOARD.md  README.md  SHA256SUMS  SUBMISSIONS.md  harness.py  solvers.py  tasks.yaml
benchmarks/genome_writing_challenge/: README.md  SUBMISSIONS.md  harness.py  run.py
benchmarks/immuno/: harness.py
benchmarks/loop/: SHA256SUMS  harness.py  loop_bench_metrics.json
benchmarks/offtarget/: SHA256SUMS  chromatin_incremental.json  chromatin_validation.json  harness.py  offtarget_bench_fixture.csv  offtarget_bench_metrics.json  offtarget_calibration.json  split.json
benchmarks/oracle/: SHA256SUMS  harness.py  oracle_bench_metrics.json
benchmarks/position_effect/: README.md  SHA256SUMS  harness.py  split.json
benchmarks/verify/: SHA256SUMS  harness.py  rule_spec.json  verify_bench_metrics.json
benchmarks/writer_efficiency/: README.md  SHA256SUMS  harness.py  result.json  split.json
benchmarks/writespec/: SHA256SUMS  corpus.json  harness.py  splits.json  writespec_bench_metrics.json
config/: hg38_chr_accessions.yaml  triangulation_rules_v3.yaml
configs/: aav_serotype_tropism.yaml  antipeg.yaml  atlas_families.yaml  bridge_offtarget_profile.yaml  capsid_epitope_oracle.yaml  capsid_sequences.fasta  cargo_polish.yaml  cell_types.yaml  datasets.yaml  delivery_constraints.yaml  delivery_rules.yaml  delivery_vehicles.yaml  gates_v3.yaml  genotoxicity_oracle.yaml  gsh_validated_heldout.yaml  intent_weights.yaml  known_unknowns.yaml  llm.yaml  metric_guide.yaml  mhc_epitope_oracle.yaml  monitor_queries.yaml  score_axes.yaml  seroprevalence.yaml  target_sites.yaml  universe_crosswalk.yaml  write_types.yaml  writer_sequences.fasta  wtkb_curated.yaml
configs/atlas/: writer_eff_conformal.json
configs/calibration/: preexisting_nab_independent.yaml
configs/expression/: modifiers.yaml  promoters.yaml
configs/oracles/: execution.yaml  reliability.yaml  scope_cards.yaml
configs/rules/: compliance.yaml  delivery.yaml  fold.yaml  multiplex.yaml  payload.yaml  reachability.yaml
configs/safety/: hazard_registry.yaml  policy.yaml  probes.yaml
configs/twin/: position_effect_conformal.json
data/: benchmark_panel.csv  discover_gate_labels.csv  discover_screen_results.parquet  gsh_matched_controls.parquet  rag_corpus.parquet  rag_corpus_emb.npy  source_inventory_genome_atlas.parquet  source_inventory_pen_assemble.parquet  source_inventory_pen_score.parquet  writer_efficiency.parquet  writer_panel.csv
docker/: Dockerfile  Dockerfile.phase1  casoffinder.Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  requirements.txt  ui.Dockerfile  web.Dockerfile
docs/: BACKLOG.md  DEPLOY.md  INFRA.md  MCP.md  RELEASING.md  REPRO.md  STABILITY.md  agent.md  alphagenome_feasibility.md  autonomy.md  benchmark_circularity.md  biosecurity.md  build_interface.md  challenge.md  closed_loop.md  co_scientist.md  co_scientist_loop.md  delivery.md  delivery_immunology.md  delivery_recommender.md  digital_twin.md  dissemination.md  environment.md  experiment_design.md  generative_design.md  immune_profiler.md  index.md  integrations.md  live_oracles.md  mechanistic_constraints.md  offtarget.md  oracle_mesh.md  oracles.md  position_effect.md  positioning.md  private_data_formats.md  quickstart.md  responsible_use.md  rule_spec.md  rules.md  (+12 more)
examples/: agent_tools.py  external_agent.py  mcp_client.py
oracle_cache/: README.md
pen_stack/: __init__.py  _resources.py  cli.py
prereg/: SHA256_LOCK_phase0.json  SHA256_LOCK_phase1_5.json  SHA256_LOCK_phase2.json  SHA256_LOCK_phase3.json  SHA256_LOCK_ws_a.json  SHA256_LOCK_ws_acq.json  SHA256_LOCK_ws_aldesign.json  SHA256_LOCK_ws_alvalidate.json  SHA256_LOCK_ws_atlas.json  SHA256_LOCK_ws_b.json  SHA256_LOCK_ws_ba.json  SHA256_LOCK_ws_ba_v33.json  SHA256_LOCK_ws_ba_v45.json  SHA256_LOCK_ws_bench.json  SHA256_LOCK_ws_c.json  SHA256_LOCK_ws_cal.json  SHA256_LOCK_ws_calib.json  SHA256_LOCK_ws_challenge.json  SHA256_LOCK_ws_chat.json  SHA256_LOCK_ws_cite.json  SHA256_LOCK_ws_closedloop.json  SHA256_LOCK_ws_continual.json  SHA256_LOCK_ws_cosci2.json  SHA256_LOCK_ws_crit.json  SHA256_LOCK_ws_ct.json  SHA256_LOCK_ws_d.json  SHA256_LOCK_ws_delivery.json  SHA256_LOCK_ws_drift.json  SHA256_LOCK_ws_e.json  SHA256_LOCK_ws_env.json  SHA256_LOCK_ws_ep.json  SHA256_LOCK_ws_epitope.json  SHA256_LOCK_ws_expr2.json  SHA256_LOCK_ws_f.json  SHA256_LOCK_ws_frontend.json  SHA256_LOCK_ws_g.json  SHA256_LOCK_ws_gen.json  SHA256_LOCK_ws_genotox.json  SHA256_LOCK_ws_graph.json  SHA256_LOCK_ws_h.json  (+119 more)
schemas/: writespec.json
scripts/: 05_extract_esm2_embeddings.py  06_train_discover_models.py  07_screen_is110.py  build_capsid_fitness.py  build_rag_corpus.py  calibrate_immune_axes.py  fetch_licensed_sources.py  offtarget_chromatin_incremental.py  offtarget_chromatin_matched.py  offtarget_chromatin_validation.py  p1_build_atlas.py  p1_build_durability.py  p1_build_position_effect.py  p1_build_writer_eff.py  p1_export_tracks.py  p1_safety_concordance.py  p1_train_safety.py  p1_validation_report.py  p2_build_atlas.py  p3_benchmark_report.py  p4_genome_scan.py  p52_build_genotox_oracle.py  p53_build_epitope_oracle.py  predownload_esm2.py  ws_b_report.py  ws_c_report.py
tests/: conftest.py
tools/: make_coverage_badge.py  penctl.py
web/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.js
(+463 files in other folders)
