[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pen-stack"
version = "3.0.0a4"
description = "Open infrastructure for genome writing: the Writable Genome atlas, the Writer Atlas, and the Write Planner."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anees Ahmed Mahaboob Ali", email = "ahmedaneesm@gmail.com" }]
keywords = [
  "genome-writing", "genome-editing", "bridge-recombinase", "safe-harbor",
  "writable-genome", "writer-atlas", "write-planner", "bioinformatics",
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "click>=8.1",
  "requests>=2.32",
  "tqdm>=4.66",
]

[project.optional-dependencies]
models = ["xgboost>=2.1", "torch>=2.3", "statsmodels>=0.14"]
bio = ["biopython>=1.84", "pysam>=0.22", "pyBigWig>=0.3", "pybedtools>=0.10", "ViennaRNA>=2.6"]
server = ["fastapi>=0.111", "uvicorn>=0.30"]
services = ["litellm>=1.44", "paper-qa>=5.10", "streamlit>=1.37", "fastmcp>=2.3", "beautifulsoup4>=4.12"]
orchestrate = ["paramiko>=3.4", "scp>=0.15", "rich>=13.7", "python-dotenv>=1.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
dev = ["pytest>=8", "ruff>=0.5", "pytest-cov>=5"]

[project.scripts]
pen-stack = "pen_stack.cli:main"

[project.urls]
Homepage = "https://github.com/ahmedanees-m/pen-stack"
Repository = "https://github.com/ahmedanees-m/pen-stack"

[tool.setuptools.packages.find]
include = ["pen_stack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
